<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_section4"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_aplicativo"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondary_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:text="@string/aplicativo"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_versao"
                android:textColor="@color/secondary_text" />

            <EditText
                android:id="@+id/edtVersao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/label_copyright"
                android:textColor="@color/secondary_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:text="@string/copyright"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/label_contato"
                android:textColor="@color/secondary_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:enabled="false"
                android:hint="@string/contato"
                android:text="@string/contato"
                android:textColor="@color/primary_text" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/banner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" />

</LinearLayout>